--- a/content.css
+++ b/content.css
@@ -12,6 +12,11 @@ body {
 
 header {
     background-color: #100e21;
+    position: fixed;
+    top: 4%;
+    width: 800em;
+    max-width: 100%;
+    margin-top: -2.5em;
 }
 
 .navigation {
