--- a/content.css
+++ b/content.css
@@ -11,7 +11,7 @@ body {
  /* NAVBAR */
 
 header {
-    background-color: #100e21;
+    background-color: #100e21d2;
     position: fixed;
     top: 4%;
     width: 800em;
