--- a/content.css
+++ b/content.css
@@ -1,17 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root {
+    --neutral-color: #000000;
+    --header-bg-color: #100e21d2; 
+    --subscribe-bg-color: #db9efb;
+    --white-words: #ffffff;
+    --footer-color: #9e86ff;
+}
+
 /* RESET */
 body {
     all: unset;
     font-family: 'Quicksand', sans-serif;
-    color: #ffffff;
-    background-color: #000000;
+    color: var(--white-words);
+    background-color: var(--neutral-color);
 }
 
  /* NAVBAR */
 
 header {
-    background-color: #100e21d2;
+    background-color: var(--header-bg-color);
     position: fixed;
     top: 4%;
     width: 800em;
@@ -41,7 +49,7 @@ li {
 }
 
 #login, #subscribe {
-    color: #ffffff;
+    color: var(--white-words);
     margin-right: 1rem;
     border: transparent;
     border-radius: 2.1rem;
@@ -53,13 +61,13 @@ li {
     background-color: transparent;
 }
 #subscribe {
-    background-color: #db9efb;
+    background-color: var(--subscribe-bg-color);
     padding: 0.3rem 1.5rem;
     transition: 0.7s ease-in;
 }
 #subscribe:hover {
-    background-color: #ffffff;
-    color: #000000;
+    background-color: var(--white-words);
+    color: var(--neutral-color);
     transition: 0.7s ease-in-out;
 }
 
@@ -122,7 +130,7 @@ li {
     font-weight: 900;
 }
 .second-title > button {
-    color: #ffffff;
+    color: var(--white-words);
     padding: 0.8rem 2.5rem;
     margin-top: 0.5rem;
     font-size: 1rem;
@@ -188,6 +196,7 @@ li {
     align-items: center;
     justify-content: center;
     perspective: 1800px;
+    z-index: 0;
 }
 .prices2 {
     perspective: 10000px;
@@ -255,7 +264,6 @@ li {
 .image1:hover + .image1hover, .image2:hover + .image2hover, .image3:hover + .image3hover, .image4:hover + .image4hover, .image5:hover + .image5hover, .image6:hover + .image6hover {
     display: block;
     transform: scale(1.05);
-    transform: ;
 }
 .image1:hover, .image2:hover, .image3:hover, .image4:hover, .image5:hover, .image6:hover {
     display: none;
@@ -263,7 +271,7 @@ li {
 
 footer {
     font-family: "Raleway", sans-serif;
-    color: #9e86ff;
+    color: var(--footer-color);
 }
 .links > ul {
     display: flex;
@@ -276,7 +284,7 @@ footer {
     cursor: pointer;
 }
 .links > ul > li:hover{
-    color: #ffffff;
+    color: var(--white-words);
 }
 footer > p {
     font-size: 0.75rem;
@@ -295,8 +303,8 @@ footer > p {
     cursor: pointer;
 }
 .social-medias > ul > li > a > i {
-    color: #9e86ff;
+    color: var(--footer-color);
 }
 .social-medias > ul > li > a > i:hover {
-    color: #ffffff
+    color: var(--white-words);
 }
